# gail

./: .containerignore  .gitignore  CLAUDE.md  Cargo.toml  Containerfile  MIGRATION_AUDIT.md  Old_Containerfile  README.md  build.rs  gail.yaml  log.txt  test_Containerfile  testing_Containerfile
.github/wiki/: Home.md
.github/workflows/: build-and-release.yml  ci.yml  init-wiki.yml  release.yml  trading-ci-safe-tests.yml
data/: llm_interactions.jsonl  provider_metrics.json
docs/: INFERENCE_TRADING_RELIABILITY.md  LLM_SNN_MIRROR_WORKFLOW.md  OCTOBOT_CONNECTIVITY.md  OPERATIONS.md  PROJECT_WORKFLOWS.md
packaging/deb/: gail.service
scripts/: build-deb.sh  derive-version.sh  install_gail_baremetal_deps.sh  package-release.sh  preflight.sh  release-common.sh  set-release-version.sh  test-trading-ci-safe.sh
scripts/old/: build-deb.sh  package-release.sh  preflight.sh  set-release-version.sh
scripts/trainer/: qlora_sft.py
src/: aarnn_bridge.rs  adaptive_schema.rs  aer.rs  api_issues.rs  app.rs  client.rs  config.rs  errors.rs  hardware.rs  lib.rs  llm_ledger.rs  main.rs  metrics.rs  mirror_worker.rs  models.rs  nmc_telemetry.rs  orchestration.rs  prompt_budget.rs  routing.rs  specialists.rs  trainer_worker.rs
src/providers/: gemini.rs  mod.rs  ollama.rs  openai.rs
src/trading/: advisor.rs  backtest.rs  config.rs  datalake.rs  decision.rs  fuzzy.rs  mod.rs  octobot.rs  refiner.rs  state.rs  tests.rs
src/training/: qlora_sft.rs
