[package]
name = "gail"
version = "0.1.0"
edition = "2024"
description = "Gateway AI and neuromorphic middleware for NeuralMimicry services"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
http = "1"
mime_guess = "2"
once_cell = "1"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sysinfo = "0.33"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
