[package]
name = "gail"
version = "0.1.12"
edition = "2024"
description = "Gateway AI and neuromorphic middleware for NeuralMimicry services"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4.6", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
http = "1.4"
mime_guess = "2.0"
once_cell = "1.21"
rand = "0.9"
rayon = "1.12"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "cookies", "http2", "json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11"
sysinfo = "0.39"
thiserror = "2.0"
tokio = { version = "1.52", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tch = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.23", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.27"
wiremock = "0.6"

[[bin]]
name = "gail-qlora-sft"
path = "src/training/qlora_sft.rs"
